# robotics-test-framework

./: Cargo.toml  clippy.toml
.cargo/: config.toml
arm/: Cargo.toml
arm/examples/: continuous_spawn.rs  find_by_touch.rs  find_grasp_place.rs  grasp_robustness.rs  pick_place.rs  reach_pose.rs  reach_pose_with_faults.rs
arm/src/: arm.rs  examples_.rs  fk.rs  ik.rs  lib.rs  pd_controller.rs  ports.rs  spec.rs  state.rs  test_helpers.rs  world.rs
arm/src/goals/: composite.rs  mod.rs  pick_object.rs  place_in_bin.rs  reach_pose.rs  stack.rs
arm/tests/: pick_place_e2e.rs  reach_pose_e2e.rs  reach_pose_with_faults.rs  release_falls.rs
core/: Cargo.toml
core/src/: clock.rs  controller.rs  goal.rs  lib.rs  noise_source.rs  port.rs  port_id.rs  score.rs  sensor_reading.rs  time.rs  world_view.rs
docs/plans/: 2026-05-05-robotics-test-framework-design-review-1.md  2026-05-05-robotics-test-framework-design-v2.md  2026-05-05-robotics-test-framework-design.md  2026-05-05-robotics-test-framework-implementation-plan-review-1.md  2026-05-05-robotics-test-framework-implementation-plan-v2.md  2026-05-05-robotics-test-framework-implementation-plan.md  2026-05-06-find-grasp-place-design.md  2026-05-06-find-grasp-place-plan.md  2026-05-07-rapier-integration-design.md  2026-05-07-rapier-integration-plan.md  2026-05-08-sweep-controllers-redesign-plan.md
harness/: Cargo.toml
harness/src/: lib.rs  run.rs  types.rs
sim/: Cargo.toml
sim/src/: entity.rs  fixture.rs  gravity.rs  lib.rs  object.rs  palette.rs  primitive.rs  rate_scheduler.rs  recorder.rs  runnable_world.rs  scene.rs  shape.rs  sim_clock.rs  visualizable.rs
sim/src/faults/: delay.rs  drop_messages.rs  gaussian_noise.rs  mod.rs  pcg_noise_source.rs  stale_data.rs
sim/src/physics/: debug_render.rs  mod.rs  world.rs
viz/: Cargo.toml
viz/src/: file_recorder.rs  lib.rs  rerun_recorder.rs
