[workspace]
resolver = "2"
members = ["core", "sim", "arm", "harness", "viz"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
nalgebra = "0.33"
smallvec = "1"
rand = { version = "0.8", default-features = false }
rand_pcg = "0.3"
rand_distr = { version = "0.4", default-features = false }
rerun = { version = "0.21", default-features = false, features = ["sdk"] }
# rapier3d 0.21 — pinned to align with nalgebra 0.33. Default features
# (`dim3`, `f32`) are required for the crate to compile; `serde-serialize`
# enables Bincode-friendly state; `debug-render` exposes the
# `DebugRenderPipeline` used by Phase 2's overlay. `parallel` is
# intentionally OFF — the rayon-driven steps are non-deterministic per
# design v2 §10.
#
# rapier3d "simd-stable" not enabled: re-evaluated 2026-05-09 under
# relaxed §10 (statistical determinism). Empirical wall-time on
# find_grasp_place_seed_1 (warm cache, 22.5s sim time): 0.12-0.13s either
# way (1.0x ratio). Rapier's SIMD lanes win at hundreds of bodies; our
# scenes have ~6. Re-evaluate when scene complexity grows substantially.
rapier3d = { version = "0.21", features = ["serde-serialize", "debug-render"] }

[workspace.lints.clippy]
disallowed_types = "deny"
disallowed_methods = "deny"
