[package]
name = "rtf_arm"
version = "0.1.0"
edition.workspace = true

[features]
default = ["physics-rapier"]
# Test scenarios + helpers (test_helpers module) used by example binaries
# under examples/ and by the release_falls integration test. Gated so the
# default build doesn't pull in the helper code.
examples = []
# Integration tests under tests/. Currently just gates release_falls.rs via
# `#![cfg(feature = "e2e")]`. Pulls in `examples` for test_helpers access.
e2e = ["examples"]
# Rapier-backed dynamics + arm-vs-object contact (rapier-integration plan,
# Phase 1). Default-on as of Step 1.13 once the kinematic gravity_step
# path was removed.
physics-rapier = ["rtf_sim/physics-rapier"]
# Phase 8: rerun-backed example variants. Pulls in `e2e` plus the rerun
# feature on rtf_viz so the pick_place example can plug a `RerunRecorder`
# into the harness (via `--features viz-rerun`).
viz-rerun = ["e2e", "rtf_viz/rerun"]

[dependencies]
rtf_core = { path = "../core" }
rtf_sim = { path = "../sim" }
nalgebra.workspace = true

[dev-dependencies]
rtf_harness = { path = "../harness" }
rtf_viz = { path = "../viz" }

[[example]]
name = "pick_place"
required-features = ["examples"]

[[example]]
name = "reach_pose"
required-features = ["examples"]

[[example]]
name = "reach_pose_with_faults"
required-features = ["examples"]

[[example]]
name = "find_grasp_place"
required-features = ["examples"]

[[example]]
name = "continuous_spawn"
required-features = ["examples"]

[[example]]
name = "find_by_touch"
required-features = ["examples"]

[[example]]
name = "grasp_robustness"
required-features = ["examples"]

[lints]
workspace = true
