[package]
name = "rtf_sim"
version = "0.1.0"
edition.workspace = true

[dependencies]
rtf_core = { path = "../core" }
nalgebra.workspace = true
rand.workspace = true
rand_pcg.workspace = true
rand_distr.workspace = true
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
controller_events = []
serde = ["dep:serde", "rtf_core/serde", "nalgebra/serde-serialize"]

[lints]
workspace = true
