[package]
name = "rtf_viz"
version = "0.1.0"
edition.workspace = true

[features]
default = []
rerun = ["dep:rerun"]

[dependencies]
rtf_sim = { path = "../sim", features = ["serde"] }
rerun = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rtf_core = { path = "../core" }
nalgebra.workspace = true

[lints]
workspace = true
